--- a/src/components/BodyHeader/BodyHeader.css
+++ b/src/components/BodyHeader/BodyHeader.css
@@ -3,8 +3,8 @@
   justify-content: space-between;
   align-items: center;
   height: 50px;
-  padding-left: 100px;
-  padding-right: 100px;
+  padding-left: 300px;
+  padding-right: 300px;
 }
 
 .search-header input{
@@ -16,8 +16,9 @@
 }
 
 .filter-buttons {
-  padding-right: 100px;
-  padding-left: 100px;
+  padding-right: 300px;
+  padding-left: 300px;
+  padding-bottom: 10px;
 }
 
 .filter-buttons-level {
