--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,15 +1,16 @@
 footer{
-    padding: 15px;
+    padding: 5px;
     display: flex;
     flex-direction: row;
     font-family: 'Sofia Sans', sans-serif;
-    font-size: 20px;
-    width: 100%;
+    font-size: 15px;
     color: white;
+    width: 100%;
     gap:2%;
     bottom: 0;
     height: 50px;
     padding-left: 250px;
+    position: fixed;
 }
 
 .theme-purple{
